readability fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2916,6 +2916,7 @@ input, select, textarea {
 
 	#header {
 		padding: 2em 0 0.1em 0 ;
+		align-self: center;
 	}
 
 		#header .logo {
@@ -2964,10 +2965,10 @@ input, select, textarea {
 	position: relative;
 	color: white;
 	font-size: 1.2em;
-	padding-left: 14em;
-	padding-right: 14em;
+	width:53%;
 	text-align: center;
-
+	margin-right: 23.5%;
+	margin-left: 23.5%;
 }
 
 /* Main */
